# camera_apps

./: CMakeLists.txt  nodelet.xml  package.xml
config/param/: hog_detector.yaml  mask_rcnn.yaml  motion_predictor.yaml  object_detector.yaml  object_state_estimator.yaml  person_recognizer.yaml
config/rviz/: camera_apps.rviz  camera_apps_colorful.rviz  camera_apps_colorful2.rviz  camera_apps_full.rviz
include/: hungarian.h
include/hog_detector/: hog_detector.h
include/mask_rcnn/: mask_rcnn.h
include/motion_predictor/: motion_predictor.h
include/object_detector/: object_detector.h
include/object_state_estimator/: object_state_estimator.h
include/person_recognizer/: person_recognizer.h
launch/: camera_apps_node.launch  camera_apps_nodelet.launch  hog_detector_nodelet.launch  hog_tracker_nodelet.launch  image_transport.launch  integrate_tracker_nodelet.launch  mask_rcnn_node.launch  mask_rcnn_nodelet.launch  object_detector_node.launch  object_detector_nodelet.launch  person_recognizer_nodelet.launch
src/: :  ]  hog_detector.cpp  hog_detector_node.cpp  hog_detector_nodelet.cpp  hungarian.cpp  mask_rcnn.cpp  mask_rcnn_node.cpp  mask_rcnn_nodelet.cpp  motion_predictor.cpp  motion_predictor_node.cpp  motion_predictor_nodelet.cpp  object_detector.cpp  object_detector_node.cpp  object_detector_nodelet.cpp  object_state_estimator.cpp  object_state_estimator_node.cpp  object_state_estimator_nodelet.cpp  person_recognizer.cpp  person_recognizer_node.cpp  person_recognizer_nodelet.cpp
