<?xml version="1.0"?>
<package format="2">
  <name>camera_apps</name>
  <version>0.0.0</version>
  <description>The camera_apps package</description>

  <maintainer email="horiike@todo.todo">horiike</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>camera_apps_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>camera_apps_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>


</package>
